# router/app.go
@@ -21,6 +21,8 @@ func Router() *gin.Engine {
 
 	r.GET("/user/createUser", service.CreateUser)
 
+	r.GET("/user/deleteUser", service.DeleteUser)
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	return r
