# service/user_service.go
@@ -3,6 +3,7 @@ package service
 import (
 	"gin-chat/models"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -46,5 +47,23 @@ func CreateUser(c *gin.Context) {
 	models.CreateUser(&user)
 	c.JSON(http.StatusOK, gin.H{
 		"message": "新增用户成功",
+	})
+}
+
+// DeleteUser
+// @Summary 删除用户
+// @Tags 用户模块
+// @param id query string true "id"
+// @Accept json
+// @Produce json
+// @Success 200 {string} json{"code","message"}
+// @Router /user/deleteUser [get]
+func DeleteUser(c *gin.Context) {
+	user := models.UserBasic{}
+	id, _ := strconv.Atoi(c.Query("id"))
+	user.ID = uint(id)
+	models.DeleteUser(&user)
+	c.JSON(http.StatusOK, gin.H{
+		"message": "删除用户成功",
 	})
 }
